<resources>
    <string name="search_fragment">Search Fragment</string>
    <string name="key_words">Должность, ключевые слова</string>
    <string name="filter">фильтры</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="more_vacancies">Еще %d вакансии</string>
    <string name="up_cv_in_search">Поднять резюме в поиске</string>
    <string name="up">Поднять</string>
    <string name="vacancy_title">UI/UX Designer</string>
    <string name="favourite">Избранное</string>
    <string name="minsk">Минск</string>
    <string name="mobirix">Мобирикс</string>
    <string name="confirmed_company">Подтверждённый работадатель</string>
    <string name="experience">Опыт работы</string>
    <string name="exp_1_3">Опыт от 1 года до 3 лет</string>
    <string name="published_date">Опубликовано %s %s</string>
    <string name="respond">Откликнуться</string>
    <string name="sort">Сортировка</string>
    <string name="sort_text">По соответствию</string>
    <string name="vacancy_number">%s вакансий</string>
    <string name="back">Назад</string>
    <string name="like">Нравится</string>
    <string name="hidden_salary">Уровень дохода не указан</string>
    <string name="full_schedule">Полная занятость</string>
    <string name="responded_person_count">147 человек уже откликнулись</string>
    <string name="looking_person_count">2 человека сейчас смотрят</string>
    <string name="mock_address">Минск, улица Бирюзова, 4/5</string>
    <string name="mock_description"><![CDATA[MOBYRIX - динамично развивающаяся продуктовая IT-компания, специализирующаяся на разработке мобильных приложений для iOS и Android. Наша команда работает над собственными продуктами в разнообразных сферах: от утилит до развлечений и бизнес-приложений. Мы ценим талант и стремление к инновациям и в данный момент в поиске талантливого UX/UI Designer, готового присоединиться к нашей команде и внести значимый вклад в развитие наших проектов.]]></string>
    <string name="yout_tasks">Ваши задачи</string>
    <string name="mock_responsibilities">-Проектировать пользовательский опыт, проводить UX исследования; -Разрабатывать адаптивный дизайн интерфейса для мобильных приложений; -Разрабатывать быстрые прототипы для тестирования идеи дизайна и их последующая; интеграция на основе обратной связи от команды и пользователей; -Взаимодействовать с командой разработчиков для обеспечения точной реализации ваших дизайнов; -Анализ пользовательского опыта и адаптация под тренды.</string>
    <string name="question">Задайте вопрос работодателю</string>
    <string name="ask_question">Он получит его с откликом на вакансию</string>
    <string name="cv_for_respond">Резюме для отклика</string>
    <string name="ui_ux">UI/UX дизайнер</string>
    <string name="add_letter">Добавить сопроводительное</string>
    <string name="letter_text">Ваше сопроводительное письмо</string>
</resources>