<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grey_two_background">

    <TextView
        android:id="@+id/lookingNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/looking_person_number"
        android:textColor="@color/green"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/vacancyFullHeartImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/action_full_heart"
        android:contentDescription="@string/favourite"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vacancyTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacancy_title"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/lookingNumberTextView"
        app:layout_constraintStart_toStartOf="@id/lookingNumberTextView" />

    <TextView
        android:id="@+id/addressTownTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minsk"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/vacancyTitleTextView"
        app:layout_constraintStart_toStartOf="@id/vacancyTitleTextView" />

    <TextView
        android:id="@+id/companyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobirix"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/addressTownTextView"
        app:layout_constraintStart_toStartOf="@id/addressTownTextView" />

    <ImageView
        android:id="@+id/confirmedCompanyImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/confirmed_company_icon"
        android:contentDescription="@string/confirmed_company"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/companyTextView"
        app:layout_constraintBottom_toBottomOf="@id/companyTextView"
        app:layout_constraintStart_toEndOf="@id/companyTextView" />

    <ImageView
        android:id="@+id/experienceImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/experience_suitcase_icon"
        android:contentDescription="@string/experience"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/companyTextView"
        app:layout_constraintTop_toBottomOf="@id/companyTextView" />

    <TextView
        android:id="@+id/experienceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_1_3"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/experienceImageView"
        app:layout_constraintTop_toTopOf="@id/experienceImageView"
        app:layout_constraintBottom_toBottomOf="@id/experienceImageView" />

    <TextView
        android:id="@+id/publishedDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/published_date"
        android:textColor="@color/grey_3"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/experienceImageView"
        app:layout_constraintTop_toBottomOf="@id/experienceImageView" />

    <Button
        android:id="@+id/respondButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/find_worker_button_background"
        android:text="@string/respond"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/publishedDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>