<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vacancyPageConstraint"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp"/>

        <ImageView
            android:id="@+id/arrowBackImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow_icon"
            android:contentDescription="@string/back"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <ImageView
            android:id="@+id/eyeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eye_icon"
            android:importantForAccessibility="no"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            app:layout_constraintEnd_toStartOf="@id/shareImageView" />

        <ImageView
            android:id="@+id/shareImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:importantForAccessibility="no"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            app:layout_constraintEnd_toStartOf="@id/favouriteImageView" />

        <ImageView
            android:id="@+id/favouriteImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/action_full_heart"
            android:contentDescription="@string/like"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

        <TextView
            android:id="@+id/vacancyTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancy_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/arrowBackImageView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <TextView
            android:id="@+id/salaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hidden_salary"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/vacancyTitleTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <TextView
            android:id="@+id/experienceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/salaryTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <TextView
            android:id="@+id/schedulesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_schedule"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/experienceTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <LinearLayout
            android:id="@+id/darkGreenBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/schedulesTextView"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/respondedBackground"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:background="@drawable/vacancy_page_dark_green_background"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/respondedPersonCountTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/responded_person_count"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/respondedPersonIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/responded_person_icon"
                    android:importantForAccessibility="no"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lookingBackground"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:background="@drawable/vacancy_page_dark_green_background">

                <TextView
                    android:id="@+id/lookingTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/looking_person_count"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/lookingPersonIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/looking_person_icon"
                    android:importantForAccessibility="no"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mapLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/grey_two_background"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/darkGreenBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/companyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobirix"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/sf_pro_display_regular" />

                <ImageView
                    android:id="@+id/confirmedCompanyImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/confirmed_company_icon"
                    android:contentDescription="@string/confirmed_company" />

            </LinearLayout>

            <ImageView
                android:id="@+id/mapImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/photo_2024_02_23_11_52_08"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/mock_address"
                android:textColor="@color/white"
                android:fontFamily="@font/sf_pro_display_regular" />

        </LinearLayout>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mock_description"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/mapLinearLayout"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

        <TextView
            android:id="@+id/tasksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yout_tasks"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <TextView
            android:id="@+id/responsibilitiesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mock_responsibilities"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tasksTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/responsibilitiesTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <TextView
            android:id="@+id/askQuestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_question"
            android:textColor="@color/grey_3"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/questionTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/questionRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@id/respondButton"
            app:layout_constraintTop_toBottomOf="@id/askQuestionTextView"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

        <Button
            android:id="@+id/respondButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/respond_square_background"
            android:text="@string/respond"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/guidelineBegin"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toBottomOf="@id/questionRecyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>