<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/background_dark">

    <View
        android:layout_width="38dp"
        android:layout_height="5dp"
        android:background="@drawable/rectangle_background"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@drawable/circle_background">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/avatar"
                android:importantForAccessibility="no" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_for_respond"
                android:textColor="@color/grey_3"
                android:fontFamily="@font/sf_pro_display_regular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_ux"
                android:textColor="@android:color/white"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/grey_2" />

    <EditText
        android:id="@+id/letterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="85dp"
        android:gravity="top|start"
        android:hint="@string/letter_text"
        android:textColorHint="@color/grey_3"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textColor="@color/white"
        android:visibility="gone"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/addLetterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_letter"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/respondButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/respond_square_background"
        android:text="@string/respond"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:layout_marginTop="20dp" />

</LinearLayout>
