<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <EditText
        android:id="@+id/queryEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/grey_two_background"
        android:drawableStart="@drawable/action_search"
        android:drawablePadding="12dp"
        android:paddingStart="8dp"
        android:hint="@string/key_words"
        android:textColorHint="@color/grey_4"
        android:inputType="text"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guidelineBegin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterImageView" />

    <ImageView
        android:id="@+id/filterImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/action_filter"
        android:contentDescription="@string/filter"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/queryEditText"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/queryEditText"
        app:layout_constraintBottom_toBottomOf="@id/queryEditText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommendationRecyclerView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/grey_2"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/queryEditText"
        app:layout_constraintStart_toStartOf="@id/guidelineBegin"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

    <TextView
        android:id="@+id/vacanciesForYouTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacancies_for_you"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/recommendationRecyclerView"
        app:layout_constraintStart_toStartOf="@id/guidelineBegin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vacanciesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey_2"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/vacanciesForYouTextView"
        app:layout_constraintBottom_toTopOf="@id/moreVacanciesButton"
        app:layout_constraintStart_toStartOf="@id/guidelineBegin"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd" />

    <Button
        android:id="@+id/moreVacanciesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_enabled_background"
        android:text="@string/more_vacancies"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/guidelineBegin"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toBottomOf="parent" />
    
</androidx.constraintlayout.widget.ConstraintLayout>